cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_BUILD_TYPE debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")
project(MyProject)
find_package(OpenCV REQUIRED)
add_executable(MyProject main.cpp)
target_link_libraries(MyProject ${OpenCV_LIBS})